--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,9 @@ body {
   color: #434455;
 }
 
+.header {
+  border-bottom: solid #e7e9fc;
+}
 ul {
   list-style-type: none;
   margin: 0;
@@ -31,7 +34,6 @@ h6 {
   text-align: center;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  margin-top: 188px;
   margin-bottom: 48px;
   max-width: 496px;
 }
@@ -153,6 +155,7 @@ h6 {
 .section-title {
   background-color: #2e2f42;
   padding-bottom: 188px;
+  padding-top: 188px;
 }
 
 .button-service {
@@ -179,11 +182,14 @@ h6 {
   background-color: #404bbf;
 }
 
+.section-advantages {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .advantages {
   display: flex;
   gap: 24px;
-  padding-top: 120px;
-  padding-bottom: 120px;
 }
 
 .advantages-item {
@@ -197,7 +203,6 @@ h6 {
   letter-spacing: 0.02em;
   padding-top: 32px;
   padding-left: 16px;
-  margin-bottom: 8px;
 }
 
 .text-title {
@@ -206,10 +211,6 @@ h6 {
   line-height: 1.5;
   letter-spacing: 0.02em;
   padding-left: 16px;
-}
-
-.container-color {
-  background-color: #f4f4fd;
 }
 
 .images-title-text {
@@ -226,18 +227,26 @@ h6 {
   padding: 0 0 32px;
 }
 
+.section-team-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.section-team {
+  background-color: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 72px;
+}
+
 .section-team-title {
   font-size: 36px;
   text-align: center;
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-top: 120px;
-  padding-bottom: 72px;
-}
-
-.team-name-title {
-  text-align: center;
 }
 
 .portfolio-title {
@@ -265,6 +274,9 @@ h6 {
   padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 16px;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
 }
 
 .footer-menu {
