--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .header {
-  border-bottom: solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 ul {
   list-style-type: none;
@@ -68,6 +68,14 @@ h6 {
   padding-bottom: 24px;
 }
 
+.box-logo {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 0px;
+}
+
 .logo {
   font-size: 18px;
   text-transform: uppercase;
@@ -89,6 +97,9 @@ h6 {
 
 .menu {
   display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
   gap: 40px;
 }
 
@@ -195,6 +206,21 @@ h6 {
 .advantages-item {
   width: calc((100% - 72px) / 4);
 }
+
+.name-title-team {
+  font-size: 20px;
+  font-weight: 500;
+  color: #2e2f42;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.text-title-team {
+  font-size: 16px;
+  color: #434455;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
 .name-title {
   font-size: 20px;
   font-weight: 500;
@@ -203,6 +229,7 @@ h6 {
   letter-spacing: 0.02em;
   padding-top: 32px;
   padding-left: 16px;
+  padding-right: 16px;
 }
 
 .text-title {
@@ -232,6 +259,7 @@ h6 {
   justify-content: center;
   flex-direction: column;
   gap: 8px;
+  padding: 32px 16px;
 }
 
 .section-team {
@@ -249,13 +277,17 @@ h6 {
   padding-bottom: 72px;
 }
 
+.section-portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .portfolio-title {
   font-size: 36px;
   color: #2e2f42;
   text-align: center;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  padding-top: 120px;
   padding-bottom: 72px;
 }
 
@@ -263,7 +295,6 @@ h6 {
   display: flex;
   gap: 48px 24px;
   flex-wrap: wrap;
-  padding-bottom: 120px;
 }
 
 .images {
@@ -271,12 +302,15 @@ h6 {
 }
 
 .title-name-group {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
+  padding: 32px 16px;
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .footer-menu {
