--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,11 @@ h6 {
   margin: 0;
 }
 
+.imgs {
+  display: block;
+  max-width: 100%;
+}
+
 .section-title-link {
   font-size: 56px;
   color: #fff;
@@ -213,6 +218,7 @@ h6 {
   color: #2e2f42;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .text-title-team {
@@ -227,9 +233,7 @@ h6 {
   color: #2e2f42;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-left: 16px;
-  padding-right: 16px;
+  margin-bottom: 8px;
 }
 
 .text-title {
@@ -237,7 +241,6 @@ h6 {
   color: #434455;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-left: 16px;
 }
 
 .images-title-text {
@@ -250,7 +253,7 @@ h6 {
   width: calc((100% - 72px) / 4);
   text-align: center;
   border-radius: 0 0 4px 4px;
-  padding: 0 0 32px;
+  background-color: #fff;
 }
 
 .section-team-wrapper {
@@ -258,7 +261,6 @@ h6 {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 8px;
   padding: 32px 16px;
 }
 
@@ -310,7 +312,6 @@ h6 {
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
-  gap: 8px;
 }
 
 .footer-menu {
