--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@ body {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  padding-bottom: 24px;
+  padding-top: 24px;
 }
 ul {
   list-style-type: none;
@@ -69,8 +71,6 @@ h6 {
 .container-header {
   display: flex;
   justify-content: space-between;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .box-logo {
@@ -276,7 +276,7 @@ h6 {
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-bottom: 72px;
+  margin-bottom: 76px;
 }
 
 .section-portfolio {
@@ -290,7 +290,7 @@ h6 {
   text-align: center;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .portfolio {
@@ -333,5 +333,5 @@ h6 {
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
-  padding-top: 17.5px;
+  margin-top: 16px;
 }
