--- a/css/styles.css
+++ b/css/styles.css
@@ -79,8 +79,6 @@ h6 {
   justify-content: flex-start;
   flex-direction: row;
   gap: 0px;
-  padding-bottom: 24px;
-  padding-top: 24px;
 }
 
 .logo {
@@ -93,6 +91,8 @@ h6 {
   line-height: 1.17;
   letter-spacing: 0.03em;
   margin-right: 76px;
+  padding-bottom: 24px;
+  padding-top: 24px;
 }
 .logo-link {
   color: #2e2f42;
@@ -104,24 +104,19 @@ h6 {
 
 .menu {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: row;
+  align-items: center;
   gap: 40px;
-  padding-bottom: 24px;
-  padding-top: 24px;
 }
 
 .menu-link {
+  display: block;
   text-decoration: none;
   font-size: 16px;
   font-weight: 500;
   color: #2e2f42;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-bottom: 24px;
-  padding-top: 24px;
-  /* display: block; */
+  padding: 24px 0;
 }
 .menu-link:hover {
   color: #404bbf;
@@ -137,12 +132,15 @@ h6 {
 .contacts-text {
   display: flex;
   gap: 40px;
+  margin: 0 auto;
 }
 
 .mail-link {
   display: block;
-  padding-bottom: 24px;
-  padding-top: 24px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 .mail {
   text-decoration: none;
@@ -152,6 +150,8 @@ h6 {
   line-height: 1.5;
   letter-spacing: 0.02em;
   display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .mail:hover {
   color: #404bbf;
@@ -168,6 +168,8 @@ h6 {
   line-height: 1.5;
   letter-spacing: 0.02em;
   display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .tel:hover {
   color: #404bbf;
@@ -196,14 +198,13 @@ h6 {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  min-width: 169px;
   margin: 0 auto;
-  height: 56px;
   border: none;
   border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 16px 32px;
 }
 .button-service:focus {
   background-color: #404bbf;
@@ -233,6 +234,7 @@ h6 {
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .text-title-team {
@@ -240,6 +242,7 @@ h6 {
   color: #434455;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 }
 .name-title {
   font-size: 20px;
@@ -259,13 +262,12 @@ h6 {
 
 .images-title-text {
   display: flex;
-  justify-content: center;
   gap: 24px;
+  text-align: center;
 }
 
 .images-team {
   width: calc((100% - 72px) / 4);
-  text-align: center;
   border-radius: 0 0 4px 4px;
   background-color: #fff;
 }
@@ -334,6 +336,9 @@ h6 {
   padding-bottom: 100px;
 }
 
+.logo-footer {
+  padding: 0;
+}
 .footer-logo-link {
   color: #f4f4fd;
   font-family: "Raleway", sans-serif;
